--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </table>
 <hr>
 <h2>your contact details</h2>
-<form action="mailto:ankith.ghimire@gmail.com" method="post" enctype="text/plain">
+<form action="mailto:ankith.ghimire@gmail.com" method="post" enctype="value">
   <ul>
     <label for="name">your name:</label>
     <input type="text" name="" value="">
