--- a/index.html
+++ b/index.html
@@ -3,17 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>🧔Ankith's personal webpage</title>
-<style media="screen">
-  hr{
-    background-color: #3EDBF0;
-    border-style:dashed;
-    height: 0.1px;
-    width: 20%;
-  }
-  img{
-    height: 200px;
-  }
-</style>
+<link rel="stylesheet" href="styles/styles.css">
   </head>
   <body style="background-color: #D4ECDD;">
     <table cellspacing= "25">
